fix(atomic): insight panel -  remove unnecessary scrollbars (#2311)
* feat(atomic): implement insight tabs

https://coveord.atlassian.net/browse/KIT-1913

* update area label and some styling

https://coveord.atlassian.net/browse/KIT-1913

* use tailwind

https://coveord.atlassian.net/browse/KIT-1913

* Update packages/atomic/src/components/insight/atomic-insight-tab/atomic-insight-tab.pcss


* update scrolling style

https://coveord.atlassian.net/browse/KIT-1913

* fix(atomic): hide unnecessary scrollbars

https://coveord.atlassian.net/browse/KIT-1889

--- a/packages/atomic/src/components/insight/atomic-insight-tabs/atomic-insight-tabs.pcss
+++ b/packages/atomic/src/components/insight/atomic-insight-tabs/atomic-insight-tabs.pcss
@@ -1,6 +1,6 @@
 @import '../../../global/global.pcss';
 
 :host {
-  overflow-x: scroll;
+  overflow-x: auto;
   white-space: nowrap;
 }
